Implement the easily addressable review feedback